# Python_BRUE

./: .gitignore  Copy_of_plot5_5.m  README.md  analyzeTrafficNetwork.asv  analyzeTrafficNetwork.m  brue_base.py  brue_matlab_solver.py  brue_set_solver.py  brue_solver.py  demo.py  full.md  main.m  main.py  matlabCode.ipynb  network_config.py  path_brue.py  path_brue_solver.py  plotPathCosts.m  plot_flow.nb  plot_result.py  pyproject.toml  result.md  simple.py  simple_brue.py  temp.py  test_paper_algorithm.py  test_run.m  traffic_network_config.py
.cursor/rules/: architecture-guide.mdc  brue-model.mdc  configuration-guide.mdc  matlab-integration.mdc  project-overview.mdc  sampling-strategies.mdc  usage-guide.mdc  visualization-guide.mdc  visualization.mdc
examples/: __init__.py  basic_example.py  delta_ebr_mue_example.py  plot_comparison_path_costs.py  plot_region_path_cost.py  test.m  ue_example.py
matlab/: __init__.py  analyzeTrafficNetwork.m  generateAllPathCostPlots.m  loadSaveConfig.m  main.m  main_generate_all_plots.m  plotComparisonPathCosts.m  plotPathCosts.m  plotThreeRegionsPathCosts.m
matlab/results/: result.csv  result.json  tmax_data_zeta15_subset0.csv
matlab/results/散点图/: zeta15_0_0.fig  zeta15_0_0.txt  zeta31_0_0.fig  zeta31_0_0.txt
output/: __init__.py
reference/: ref.tex
src/: __init__.py  brue_base.py  brue_matlab_solver.py  brue_set_solver.py  brue_solver.py  delta_ebr_mue_solver.py  plot_comparison_path_costs.py  plot_path_costs.py  plot_region_path_cost.py  plot_styles.py  plot_tmax_teqm.py  traffic_network_config.py  ue_solver.py
