[project]
name = "python-brue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "pyomo>=6.9.2",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
