[project]
name = "python-brue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "pybind11>=2.13.6",
    "pyomo>=6.9.2",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"  # 换成你选定的镜像
default = true
